# cpp-ekosystem

./: .gitignore  CMakeLists.txt  README.md
assets/curves/particles/: sleep-alpha.cvx  sleep-scale.cvx
assets/curves/pawns/hare/: movement-height.cvx  movement-progress.cvx  movement-scale-y.cvx
assets/curves/world/: photosynthesis-multiplier.cvx
assets/data/pawns/: grass.json  hare.json  wolf.json
assets/models/: facing-plane.fbx  skysphere.fbx
assets/models/pawns/: grass.blend  grass.fbx  hare.fbx  skysphere.blend  wolf.fbx
assets/shaders/: grass.frag  grass.vert
src/ekosystem/: debug-menu.cpp  debug-menu.h  game-instance.cpp  game-instance.h  main.cpp  world.cpp  world.h
src/ekosystem/components/: camera-controller.cpp  camera-controller.h  particle-renderer.cpp  particle-renderer.h  state-machine.cpp  state-machine.h
src/ekosystem/data/: pawn-anatomy.cpp  pawn-anatomy.h  pawn-data.cpp  pawn-data.h  pawn-health.cpp  pawn-health.h  pawn-stats.h
src/ekosystem/entities/: pawn.cpp  pawn.h
src/ekosystem/entities/states/: pawn-chase-state.h  pawn-chase.h  pawn-flee.h  pawn-reproduction.h  pawn-sleep.h  pawn-wander.h
src/ekosystem/entities/states/tasks/: pawn-eat.h  pawn-find-food.h  pawn-find-mate.h  pawn-find-wander.h  pawn-flee-from.h  pawn-mate.h  pawn-move.h  pawn-wait.h
src/ekosystem/scenes/: game-scene.cpp  game-scene.h
